# sendmail2http

./: Cargo.toml  build.rs  readme.md
src/: args.rs  http.rs  lib.rs  main.rs  pack.rs  rtad.rs  rtad_wrapper.rs  sendmail.rs
