[package]
name = "sendmail2http"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.51"
git2 = "0.20.3"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
serde_json = "1.0.148"
shlex = "1.3.0"

[profile.release]
strip = true
lto = true
opt-level = "s"
